Стейты (керак, скеллиге, цинтра), НО БЕЗ РЕК

--- a/kartaWitcher/localisation/russian/state_names_l_russian.yml
+++ b/kartaWitcher/localisation/russian/state_names_l_russian.yml
@@ -86,12 +86,12 @@
  STATE_85:0 "Данциг"
  STATE_86:0 "Познань"
  STATE_87:1 "Лодзь"
- STATE_88:1 "Краков"
+ STATE_88:1 "Аделатте"
  STATE_89:0 "Станиславов"
  STATE_90:0 "Кельце"
  STATE_91:0 "Львов"
- STATE_92:0 "Люблин"
- STATE_93:0 "Цинтра"
+ STATE_92:0 "Сибелл"
+ STATE_93:0 "Холодный Ключ"
  STATE_94:0 "Полесье"
  STATE_95:0 "Новогрудок"
  STATE_96:1 "Вилейка"
@@ -101,12 +101,12 @@
  STATE_100:0 "Исландия"
  STATE_101:0 "Кастиль де Цинтра"
  STATE_102:1 "Керис"
- STATE_103:0 "Ан Скеллиг"
+ STATE_103:0 "Отригг"
  STATE_104:0 "Босния"
  STATE_105:0 "Спикероог"
  STATE_106:0 "Македония"
  STATE_107:0 "Отриггские Острова"
- STATE_108:0 "Ард Скеллиг"
+ STATE_108:0 "Фоланни"
  STATE_109:0 "Хиндарсфьялл"
  STATE_110:1 "Ундвик"
  STATE_111:0 "Уусимаа"
@@ -234,37 +234,37 @@
  STATE_231:0 "Грузия"
  STATE_232:1 "Дагестан"
  STATE_233:1 "Сочи"
- STATE_234:1 "Краснодар"
- STATE_235:0 "Ставрополь"
- STATE_236:0 "Астрахань"
- STATE_237:1 "Элиста"
- STATE_238:0 "Волгодонск"
- STATE_239:0 "Саратов"
- STATE_240:0 "Белгород"
- STATE_241:0 "Гомель"
- STATE_242:0 "Смоленск"
- STATE_243:0 "Рославль"
- STATE_244:0 "Волхов"
- STATE_245:0 "Миллерово"
- STATE_246:0 "Ржев"
- STATE_247:0 "Калинин"
- STATE_248:0 "Ярославль"
- STATE_249:0 "Казань"
- STATE_250:0 "Ульяновск"
- STATE_251:1 "Куйбышев"
- STATE_252:1 "Горький"
- STATE_253:0 "Иваново"
- STATE_254:0 "Рязань"
- STATE_255:0 "Пенза"
- STATE_256:1 "Чебоксары"
- STATE_257:0 "Тамбов"
- STATE_258:0 "Липецк"
- STATE_259:0 "Полтава"
- STATE_260:0 "Воронеж"
- STATE_261:0 "Огайо"
- STATE_262:0 "Печора"
- STATE_263:0 "Новгород"
- STATE_264:0 "Тихвин"
+ STATE_234:1 "Вырва"
+ STATE_235:0 "Ортагор"
+ STATE_236:0 "Стрепт"
+ STATE_237:1 "Марнадаль"
+ STATE_238:0 "Аттре"
+ STATE_239:0 "Фраммеринг"
+ STATE_240:0 "Тигг"
+ STATE_241:0 "Хочебуж"
+ STATE_242:0 "Вильенталь"
+ STATE_243:0 "Четыругл"
+ STATE_244:0 "Эрленвальд"
+ STATE_245:0 "Сворлагги"
+ STATE_246:0 "Трольд"
+ STATE_247:0 "Гелен"
+ STATE_248:0 "Альмхульд"
+ STATE_249:0 "Гиндарри"
+ STATE_250:0 "Мюр"
+ STATE_251:1 "Уриалла"
+ STATE_252:1 "Амберг"
+ STATE_253:0 "Настрог"
+ STATE_254:0 "Брокилон"
+ STATE_255:0 "Воле"
+ STATE_256:1 "Цидарберг"
+ STATE_257:0 "Мосберг"
+ STATE_258:0 "Роггевеен"
+ STATE_259:0 "Керакберг"
+ STATE_260:0 "Каэльф"
+ STATE_261:0 "Вартбург"
+ STATE_262:0 "Южный Юбек"
+ STATE_263:0 "Диллинген"
+ STATE_264:0 "Кастерфурт"
  STATE_265:0 "Михайловка"
  STATE_266:0 "Тегеран"
  STATE_267:0 "Кабул"
