Добавила стейты Редании, Темерии, Керака и Бругге

--- a/kartaWitcher/localisation/russian/state_names_l_russian.yml
+++ b/kartaWitcher/localisation/russian/state_names_l_russian.yml
@@ -71,14 +71,14 @@
  STATE_70:0 "Западная Словакия"
  STATE_71:0 "Восточная Словакия"
  STATE_72:0 "Заользье"
- STATE_73:0 "Карпатская Русь"
+ STATE_73:0 "Понт-Редан"
  STATE_74:0 "Восточные Судеты"
  STATE_75:0 "Моравия"
  STATE_76:0 "Северная Трансильвания"
  STATE_77:0 "Добруджа"
  STATE_78:0 "Бессарабия"
  STATE_79:0 "Молдавия"
- STATE_80:0 "Буковина"
+ STATE_80:0 "Исменберг"
  STATE_81:0 "Олтения"
  STATE_82:0 "Банат"
  STATE_83:0 "Кришана"
@@ -95,7 +95,7 @@
  STATE_94:0 "Полесье"
  STATE_95:0 "Новогрудок"
  STATE_96:1 "Вилейка"
- STATE_97:0 "Белосток"
+ STATE_97:0 "Карависта"
  STATE_98:0 "Плоцк"
  STATE_99:0 "Ютландия"
  STATE_100:0 "Исландия"
@@ -182,7 +182,7 @@
  STATE_179:0 "Бежа"
  STATE_180:0 "Порту"
  STATE_181:0 "Гуарда"
- STATE_182:0 "Крит"
+ STATE_182:0 "Нивабен"
  STATE_183:0 "Кипр"
  STATE_184:0 "Фракия"
  STATE_185:0 "Эпир"
@@ -205,7 +205,7 @@
  STATE_202:0 "Киев"
  STATE_203:0 "Черкассы"
  STATE_204:0 "Бобруйск"
- STATE_205:0 "Калуга"
+ STATE_205:0 "Адхарт"
  STATE_206:0 "Минск"
  STATE_207:0 "Витебск"
  STATE_208:0 "Луга"
@@ -265,76 +265,76 @@
  STATE_262:0 "Южный Юбек"
  STATE_263:0 "Диллинген"
  STATE_264:0 "Кастерфурт"
- STATE_265:0 "Михайловка"
- STATE_266:0 "Тегеран"
- STATE_267:0 "Кабул"
- STATE_268:0 "Французский Берег Сомали"
- STATE_269:0 "Британское Сомали"
- STATE_270:0 "Острова Питкэрн"
- STATE_271:1 "Шоа"
- STATE_272:0 "Сенегал"
- STATE_273:0 "Ливийская пустыня"
- STATE_274:0 "Гана"
- STATE_275:0 "Трансвааль"
- STATE_276:0 "Южное Онтарио"
- STATE_277:0 "Мехико"
- STATE_278:0 "Пампа"
- STATE_279:0 "Сантьяго"
- STATE_280:0 "Мату-Гросу"
- STATE_281:0 "Мальдивы"
- STATE_282:0 "Канто"
- STATE_283:0 "Ганьсу"
- STATE_284:0 "Северный остров"
- STATE_285:0 "Новый Южный Уэльс"
- STATE_286:1 "Южный Индокитай"
- STATE_287:0 "Такла-Макан"
- STATE_288:0 "Бирма"
- STATE_289:0 "Сиам"
- STATE_290:0 "Испанская Африка"
- STATE_291:0 "Багдад"
- STATE_292:0 "Неджд"
- STATE_293:0 "Йемен"
- STATE_294:0 "Оман"
- STATE_295:0 "Леопольдвиль"
- STATE_296:0 "Португальская Гвинея"
- STATE_297:0 "Экваториальная Гвинея"
- STATE_298:0 "Либерия"
- STATE_299:0 "Фолклендские острова"
- STATE_300:0 "Уругвай"
- STATE_301:0 "Парагвай"
- STATE_302:0 "Ла-Пас"
- STATE_303:0 "Лима"
- STATE_304:1 "Панама"
- STATE_305:0 "Эквадор"
- STATE_306:0 "Кундинамарка"
- STATE_307:0 "Миранда"
- STATE_308:0 "Подветренные острова"
- STATE_309:0 "Суринам"
- STATE_310:0 "Французская Гвиана"
- STATE_311:1 "Британский Гондурас"
- STATE_312:0 "Гондурас"
- STATE_313:0 "Гватемала"
- STATE_314:0 "Сальвадор"
- STATE_315:0 "Куба"
- STATE_316:0 "Коста-Рика"
- STATE_317:0 "Никарагуа"
- STATE_318:0 "Гаити"
- STATE_319:0 "Доминиканская республика"
- STATE_320:0 "Французская Индия"
- STATE_321:0 "Гоа"
- STATE_322:1 "Нагчу"
- STATE_323:0 "Непал"
- STATE_324:0 "Бутан"
- STATE_325:0 "Юньнань"
- STATE_326:0 "Гонконг"
- STATE_327:0 "Манила"
- STATE_328:0 "Гирин"
- STATE_329:0 "Танну-Тува"
- STATE_330:1 "Улан-Батор"
- STATE_331:0 "Ньюфаундленд"
- STATE_332:0 "Лабрадор"
- STATE_333:1 "Северный Борнео"
- STATE_334:1 "Калимантан"
+ STATE_265:0 "Амелл"
+ STATE_266:0 "Ток"
+ STATE_267:0 "Гиар"
+ STATE_268:0 "Тергано"
+ STATE_269:0 "Гсур"
+ STATE_270:0 "Гар Саги"
+ STATE_271:1 "Веррас"
+ STATE_272:0 "Нюнреут"
+ STATE_273:0 "Сапир"
+ STATE_274:0 "Силт"
+ STATE_275:0 "Мокдаль"
+ STATE_276:0 "Онтароль"
+ STATE_277:0 "Троккар"
+ STATE_278:0 "Вютерберг"
+ STATE_279:0 "Рекхта"
+ STATE_280:0 "Люнедберг"
+ STATE_281:0 "Гардан"
+ STATE_282:0 "Канто-глоир"
+ STATE_283:0 "Эиген"
+ STATE_284:0 "Авеанн"
+ STATE_285:0 "Понт-Каэдвен"
+ STATE_286:1 "Понт-Аэдирн"
+ STATE_287:0 "Понт-Темер"
+ STATE_288:0 "Горс-Веллен"
+ STATE_289:0 "Тегмонд"
+ STATE_290:0 "Риссберг"
+ STATE_291:0 "Чиппира"
+ STATE_292:0 "Дориан"
+ STATE_293:0 "Бурдорфф"
+ STATE_294:0 "Напий"
+ STATE_295:0 "Бренна"
+ STATE_296:0 "Майена"
+ STATE_297:0 "Гаррамор"
+ STATE_298:0 "Дорндаль"
+ STATE_299:0 "Марибор"
+ STATE_300:0 "Разван"
+ STATE_301:0 "Темерский Махакам"
+ STATE_302:0 "Каррерас"
+ STATE_303:0 "Вызима"
+ STATE_304:1 "Ла Валетт"
+ STATE_305:0 "Элландер"
+ STATE_306:0 "Мён"
+ STATE_307:0 "Новиград"
+ STATE_308:0 "Оксенфурт"
+ STATE_309:0 "Ринда"
+ STATE_310:0 "Денесле"
+ STATE_311:1 "Эгремонт"
+ STATE_312:0 "Силке"
+ STATE_313:0 "Дракенборг"
+ STATE_314:0 "Третогор"
+ STATE_315:0 "Ропчищ"
+ STATE_316:0 "Трой"
+ STATE_317:0 "Роггевен"
+ STATE_318:0 "Гелибол"
+ STATE_319:0 "Лютон"
+ STATE_320:0 "Блавикен"
+ STATE_321:0 "Ыспаден"
+ STATE_322:1 "Ямурлак"
+ STATE_323:0 "Мальва"
+ STATE_324:0 "Крейгйау"
+ STATE_325:0 "Маллеора"
+ STATE_326:0 "Понт-Ванис"
+ STATE_327:0 "Гвыдир"
+ STATE_328:0 "Кринфрид"
+ STATE_329:0 "Восточные Малеоры"
+ STATE_330:1 "Западные Малеоры"
+ STATE_331:0 "Мирт"
+ STATE_332:0 "Гленельгберг"
+ STATE_333:1 "Монтекальво"
+ STATE_334:1 "Йезерсберг"
  STATE_335:0 "Ява"
  STATE_336:0 "Сингапур"
  STATE_337:0 "Фарерские острова"
