Махакам Лирия и Ривия

--- a/kartaWitcher/localisation/russian/state_names_l_russian.yml
+++ b/kartaWitcher/localisation/russian/state_names_l_russian.yml
@@ -70,10 +70,10 @@
  STATE_69:0 "Судетская область"
  STATE_70:0 "Западная Словакия"
  STATE_71:0 "Восточная Словакия"
- STATE_72:0 "Заользье"
+ STATE_72:0 "Восточное Лирийское Синегорье"
  STATE_73:0 "Понт-Редан"
- STATE_74:0 "Восточные Судеты"
- STATE_75:0 "Моравия"
+ STATE_74:0 "Дол"
+ STATE_75:0 "Спалла"
  STATE_76:0 "Северная Трансильвания"
  STATE_77:0 "Добруджа"
  STATE_78:0 "Бессарабия"
@@ -171,8 +171,8 @@
  STATE_168:0 "Мурсия"
  STATE_169:1 "Севилья"
  STATE_170:0 "Эстремадура"
- STATE_171:0 "Галисия"
- STATE_172:1 "Наварра"
+ STATE_171:0 "Восточная пустыня Карат"
+ STATE_172:1 "Западная пустыня Карат"
  STATE_173:0 "Гранада"
  STATE_174:1 "Леон"
  STATE_175:1 "Сьюдад-Реаль"
@@ -183,7 +183,7 @@
  STATE_180:0 "Порту"
  STATE_181:0 "Гуарда"
  STATE_182:0 "Нивабен"
- STATE_183:0 "Кипр"
+ STATE_183:0 "Южная пустыня Карат"
  STATE_184:0 "Фракия"
  STATE_185:0 "Эпир"
  STATE_186:0 "Пелопоннес"
@@ -337,42 +337,42 @@
  STATE_334:1 "Йезерсберг"
  STATE_335:0 "Ява"
  STATE_336:0 "Сингапур"
- STATE_337:0 "Фарерские острова"
- STATE_338:0 "Глостершир"
- STATE_339:0 "Измир"
- STATE_340:0 "Бурса"
- STATE_341:1 "Эдирне"
- STATE_342:0 "Анталья"
- STATE_343:0 "Афьон"
- STATE_344:0 "Малатья"
- STATE_345:0 "Мерсин"
- STATE_346:0 "Конья"
+ STATE_337:0 "Видмар"
+ STATE_338:0 "Штейгер"
+ STATE_339:0 "Давор"
+ STATE_340:0 "Гоог"
+ STATE_341:1 "Брекенриггс"
+ STATE_342:0 "Дальберг"
+ STATE_343:0 "Фукс"
+ STATE_344:0 "Борос"
+ STATE_345:0 "Карбон"
+ STATE_346:0 "Ривийский Махакам"
  STATE_347:0 "Измит"
  STATE_348:0 "Кайсери"
- STATE_349:0 "Сивас"
- STATE_350:0 "Диярбакыр"
- STATE_351:0 "Вологда"
- STATE_352:0 "Хаккари"
- STATE_353:1 "Тунджели"
- STATE_354:0 "Трабзон"
- STATE_355:0 "Самсун"
- STATE_356:0 "Кастамону"
- STATE_357:0 "Новая Англия"
- STATE_358:0 "Нью-Йорк"
- STATE_359:0 "Нью-Джерси"
- STATE_360:0 "Пенсильвания"
- STATE_361:0 "Мэриленд"
- STATE_362:0 "Виргиния"
- STATE_363:0 "Северная Каролина"
- STATE_364:0 "Южная Каролина"
- STATE_365:0 "Джорджия"
- STATE_366:0 "Флорида"
- STATE_367:0 "Алабама"
- STATE_368:0 "Теннесси"
- STATE_369:0 "Кентукки"
- STATE_370:0 "Миссисипи"
- STATE_371:0 "Луизиана"
- STATE_372:0 "Арканзас"
+ STATE_349:0 "Дравоград"
+ STATE_350:0 "Скала"
+ STATE_351:0 "Растбург"
+ STATE_352:0 "Средберг"
+ STATE_353:1 "Зашчита"
+ STATE_354:0 "Лирия"
+ STATE_355:0 "Вербов"
+ STATE_356:0 "Северное Лирийское Подгорье"
+ STATE_357:0 "Низины"
+ STATE_358:0 "Межречье"
+ STATE_359:0 "Гвоздец"
+ STATE_360:0 "Ольховец"
+ STATE_361:0 "Ягодник"
+ STATE_362:0 "Уранберг"
+ STATE_363:0 "Злаго"
+ STATE_364:0 "Кам"
+ STATE_365:0 "Сорочье Взгорье"
+ STATE_366:0 "Кридам"
+ STATE_367:0 "Мевберг"
+ STATE_368:0 "Задар"
+ STATE_369:0 "Одо"
+ STATE_370:0 "Кербин"
+ STATE_371:0 "Церан"
+ STATE_372:0 "Западное Лирийское Синегорье"
  STATE_373:0 "Миссури"
  STATE_374:0 "Оклахома"
  STATE_375:0 "Техас"
