--- a/kartaWitcher/localisation/russian/state_names_l_russian.yml
+++ b/kartaWitcher/localisation/russian/state_names_l_russian.yml
@@ -373,15 +373,15 @@
  STATE_370:0 "Кербин"
  STATE_371:0 "Церан"
  STATE_372:0 "Западное Лирийское Синегорье"
- STATE_373:0 "Миссури"
- STATE_374:0 "Оклахома"
- STATE_375:0 "Техас"
- STATE_376:0 "Нью-Мексико"
- STATE_377:0 "Аризона"
- STATE_378:0 "Калифорния"
- STATE_379:0 "Невада"
- STATE_380:0 "Юта"
- STATE_381:0 "Вайоминг"
+ STATE_373:0 "Северные Малеоры"
+ STATE_374:0 "Ветергоф"
+ STATE_375:0 "Радоград"
+ STATE_376:0 "Нова-Звезда"
+ STATE_377:0 "Нортурн"
+ STATE_378:0 "Граборг"
+ STATE_379:0 "Фаргиль"
+ STATE_380:0 "Изток"
+ STATE_381:0 "Горсверг"
  STATE_382:0 "Колорадо"
  STATE_383:0 "Канзас"
  STATE_384:0 "Небраска"
