--- a/kartaWitcher/localisation/russian/state_names_l_russian.yml
+++ b/kartaWitcher/localisation/russian/state_names_l_russian.yml
@@ -52,7 +52,7 @@
  STATE_51:0 "Рейнская область"
  STATE_52:0 "Верхняя Бавария"
  STATE_53:0 "Нижняя Бавария"
- STATE_54:0 "Франкония"
+ STATE_54:0 "Дальние Драконьи Горы"
  STATE_55:0 "Гессен"
  STATE_56:0 "Везер-Эмс"
  STATE_57:0 "Вестфалия"
@@ -62,7 +62,7 @@
  STATE_61:0 "Мекленбург"
  STATE_62:1 "Передняя Померания"
  STATE_63:0 "Передняя Померания"
- STATE_64:0 "Бранденбург"
+ STATE_64:0 "Восточные Драконьи Горы"
  STATE_65:0 "Саксония"
  STATE_66:0 "Нижняя Силезия"
  STATE_67:0 "Верхняя Силезия"
@@ -75,13 +75,13 @@
  STATE_74:0 "Дол"
  STATE_75:0 "Спалла"
  STATE_76:0 "Северная Трансильвания"
- STATE_77:0 "Добруджа"
+ STATE_77:0 "Тирри"
  STATE_78:0 "Бессарабия"
  STATE_79:0 "Молдавия"
  STATE_80:0 "Исменберг"
  STATE_81:0 "Олтения"
- STATE_82:0 "Банат"
- STATE_83:0 "Кришана"
+ STATE_82:0 "Инис"
+ STATE_83:0 "Порет"
  STATE_84:0 "Трансильвания"
  STATE_85:0 "Данциг"
  STATE_86:0 "Познань"
@@ -178,7 +178,7 @@
  STATE_175:1 "Сьюдад-Реаль"
  STATE_176:1 "Бургос"
  STATE_177:1 "Балеарские острова"
- STATE_178:1 "Канарские острова"
+ STATE_178:1 "Центральные Драконьи Горы"
  STATE_179:0 "Бежа"
  STATE_180:0 "Порту"
  STATE_181:0 "Гуарда"
@@ -382,29 +382,29 @@
  STATE_379:0 "Фаргиль"
  STATE_380:0 "Изток"
  STATE_381:0 "Горсверг"
- STATE_382:0 "Колорадо"
- STATE_383:0 "Канзас"
- STATE_384:0 "Небраска"
- STATE_385:0 "Орегон"
- STATE_386:0 "Вашингтон"
- STATE_387:0 "Айдахо"
- STATE_388:0 "Монтана"
- STATE_389:0 "Северная Дакота"
- STATE_390:0 "Южная Дакота"
- STATE_391:0 "Миннесота"
- STATE_392:0 "Айова"
- STATE_393:0 "Мичиган"
- STATE_394:0 "Висконсин"
- STATE_395:0 "Иллинойс"
- STATE_396:0 "Индиана"
- STATE_397:0 "Сыктывкар"
- STATE_398:0 "Пермь"
- STATE_399:1 "Ижевск"
- STATE_400:0 "Киров"
- STATE_401:1 "Балаково"
- STATE_402:0 "Ахтубинск"
- STATE_403:0 "Тюмень"
- STATE_404:0 "Кзыл-Орда"
+ STATE_382:0 "Лан Эксетер"
+ STATE_383:0 "Холе"
+ STATE_384:0 "Тангеберг"
+ STATE_385:0 "Норен"
+ STATE_386:0 "Приморье"
+ STATE_387:0 "Линь"
+ STATE_388:0 "Белленау"
+ STATE_389:0 "Родеберг"
+ STATE_390:0 "Йарлфорд"
+ STATE_391:0 "Ваттвеир"
+ STATE_392:0 "Аэдд Гинваэль"
+ STATE_393:0 "Восточный Раквелерин"
+ STATE_394:0 "Западный Раквелерин"
+ STATE_395:0 "Локберг"
+ STATE_396:0 "Фрам"
+ STATE_397:0 "Пранберг"
+ STATE_398:0 "Лербост"
+ STATE_399:1 "Западные Драконьи горы"
+ STATE_400:0 "Порт Риквер"
+ STATE_401:1 "Порт Бельмут"
+ STATE_402:0 "Дерренберг"
+ STATE_403:0 "Темен"
+ STATE_404:0 "Реданские Драконьи Горы"
  STATE_405:0 "Ташкент"
  STATE_406:1 "Гурьев"
  STATE_407:1 "Уральск"
