--- a/WItcherMap/localisation/state_names_l_russian.yml
+++ b/WItcherMap/localisation/state_names_l_russian.yml
@@ -86,28 +86,28 @@
  STATE_85:0 "Данциг"
  STATE_86:0 "Познань"
  STATE_87:1 "Лодзь"
- STATE_88:1 "Аделатте"
+ STATE_88:1 "Брокилон"
  STATE_89:0 "Станиславов"
  STATE_90:0 "Кельце"
  STATE_91:0 "Львов"
  STATE_92:0 "Сибелл"
  STATE_93:0 "Холодный Ключ"
- STATE_94:0 "Полесье"
+ STATE_94:0 "Кастерфурт"
  STATE_95:0 "Новогрудок"
  STATE_96:1 "Вилейка"
  STATE_97:0 "Карависта"
- STATE_98:0 "Плоцк"
+ STATE_98:0 "Вырва"
  STATE_99:0 "Ютландия"
  STATE_100:0 "Исландия"
  STATE_101:0 "Кастиль де Цинтра"
- STATE_102:1 "Керис"
- STATE_103:0 "Отригг"
+ STATE_102:1 "Кастиль Де Цинтра"
+ STATE_103:0 "Вильенталь"
  STATE_104:0 "Керис"
  STATE_105:0 "Уриалла"
  STATE_106:0 "Македония"
  STATE_107:0 "Спикероог"
  STATE_108:0 "Фоланни"
- STATE_109:0 "Хиндарсфьялл"
+ STATE_109:0 "Ортагор"
  STATE_110:1 "Фоланни"
  STATE_111:0 "Хиндарсвьялл"
  STATE_112:0 "Ундвик"
@@ -168,28 +168,28 @@
  STATE_165:1 "Гиндарри"
  STATE_166:1 "Отригг"
  STATE_167:0 "Отриггские Острова"
- STATE_168:0 "Мурсия"
- STATE_169:1 "Севилья"
- STATE_170:0 "Эстремадура"
- STATE_171:0 "Восточная пустыня Карат"
- STATE_172:1 "Западная пустыня Карат"
- STATE_173:0 "Гранада"
- STATE_174:1 "Леон"
- STATE_175:1 "Сьюдад-Реаль"
- STATE_176:1 "Бургос"
- STATE_177:1 "Балеарские острова"
- STATE_178:1 "Центральные Драконьи Горы"
- STATE_179:0 "Бежа"
- STATE_180:0 "Порту"
- STATE_181:0 "Гуарда"
- STATE_182:0 "Нивабен"
- STATE_183:0 "Южная пустыня Карат"
- STATE_184:0 "Фракия"
- STATE_185:0 "Эпир"
- STATE_186:0 "Пелопоннес"
- STATE_187:0 "Эгейские острова"
- STATE_188:0 "Мемель"
- STATE_189:2 "Жемайтия"
+ STATE_168:0 "Стрепт"
+ STATE_169:1 "Хочебуж"
+ STATE_170:0 "Тигг"
+ STATE_171:0 "Четыругл"
+ STATE_172:1 "Марнадаль"
+ STATE_173:0 "Аттре"
+ STATE_174:1 "Фраммеринг"
+ STATE_175:1 "Эрленвальд"
+ STATE_176:1 "Холодный Ключ"
+ STATE_177:1 "Сибелл"
+ STATE_178:1 "Диллинген"
+ STATE_179:0 "Южный Юбек"
+ STATE_180:0 "Керакберг"
+ STATE_181:0 "Роггевеен"
+ STATE_182:0 "Воле"
+ STATE_183:0 "Цидарберг"
+ STATE_184:0 "Мосберг"
+ STATE_185:0 "Каэльф"
+ STATE_186:0 "Амберг"
+ STATE_187:0 "Настрог"
+ STATE_188:0 "Вартбург"
+ STATE_189:2 "Аделатте"
  STATE_190:0 "Курляндия"
  STATE_191:0 "Тарту"
  STATE_192:0 "Одесса"
