--- a/WItcherMap/localisation/state_names_l_russian.yml
+++ b/WItcherMap/localisation/state_names_l_russian.yml
@@ -77,7 +77,7 @@
  STATE_76:0 "Северная Трансильвания"
  STATE_77:0 "Тирри"
  STATE_78:0 "Бессарабия"
- STATE_79:0 "Молдавия"
+ STATE_79:0 "Марибор"
  STATE_80:0 "Исменберг"
  STATE_81:0 "Олтения"
  STATE_82:0 "Инис"
@@ -190,25 +190,25 @@
  STATE_187:0 "Настрог"
  STATE_188:0 "Вартбург"
  STATE_189:2 "Аделатте"
- STATE_190:0 "Курляндия"
- STATE_191:0 "Тарту"
- STATE_192:0 "Одесса"
- STATE_193:0 "Чернигов"
- STATE_194:0 "Мозырь"
- STATE_195:0 "Ленинград"
- STATE_196:0 "Херсон"
- STATE_197:0 "Николаев"
- STATE_198:0 "Винница"
- STATE_199:0 "Проскуров"
- STATE_200:0 "Запорожье"
- STATE_201:0 "Житомир"
- STATE_202:0 "Киев"
- STATE_203:0 "Черкассы"
- STATE_204:0 "Бобруйск"
- STATE_205:0 "Адхарт"
- STATE_206:0 "Минск"
- STATE_207:0 "Витебск"
- STATE_208:0 "Луга"
+ STATE_190:0 "Рисберг"
+ STATE_191:0 "Напий"
+ STATE_192:0 "Бренна"
+ STATE_193:0 "Майена"
+ STATE_194:0 "Дорндаль"
+ STATE_195:0 "Гаррамор"
+ STATE_196:0 "Бурдорфф"
+ STATE_197:0 "Дориан"
+ STATE_198:0 "Чиппира"
+ STATE_199:0 "Тегмонд"
+ STATE_200:0 "Горс-Веллен"
+ STATE_201:0 "Вызима"
+ STATE_202:0 "Ла Валетт"
+ STATE_203:0 "Элландер"
+ STATE_204:0 "Темерский Махакам"
+ STATE_205:0 "Исменберг"
+ STATE_206:0 "Мён"
+ STATE_207:0 "Разван"
+ STATE_208:0 "Каррерас"
  STATE_209:0 "Псков"
  STATE_210:0 "Невель"
  STATE_211:0 "Бургас"
