Высота, текстуры и пара новых стран

--- a/WItcherMap/localisation/countries_l_russian.yml
+++ b/WItcherMap/localisation/countries_l_russian.yml
@@ -15,6 +15,22 @@
  CTR_DEF:0 "Цинтра"
  CTR_ADJ:0 "Цинтрийск."
  
+ PTF_fascism:0 "Понтарланд"
+ PTF_fascism_DEF:0 "Понтарланд"
+ PTF_democratic:0 "Федерация Понтара"
+ PTF_democratic_DEF:0 "Федерация Понтара"
+ PTF_neutrality:1 "Федерация Понтара"
+ PTF_neutrality_DEF:1 "Федерация Понтара"
+ PTF_communism:0 "Федерация Понтара"
+ PTF_communism_DEF:0 "Федерация Понтара"
+ PTF_fascism_ADJ:0 "Понтарск."
+ PTF_democratic_ADJ:0 "Понтарск."
+ PTF_neutrality_ADJ:0 "Понтарск."
+ PTF_communism_ADJ:0 "Понтарск."
+ PTF:0 "Панергия"
+ PTF_DEF:0 "Панергия"
+ PTF_ADJ:0 "Понтарск."
+ 
  PNR_fascism:0 "Королевство Панергия"
  PNR_fascism_DEF:0 "Королевство Панергия"
  PNR_democratic:0 "Республика Панергия"
@@ -30,6 +46,38 @@
  PNR:0 "Панергия"
  PNR_DEF:0 "Панергия"
  PNR_ADJ:0 "Панергийск."
+ 
+ DMR_fascism:0 "Королевство Димерия"
+ DMR_fascism_DEF:0 "Королевство Димерия"
+ DMR_democratic:0 "Протекторат Димерия"
+ DMR_democratic_DEF:0 "Протекторат Димерия"
+ DMR_neutrality:1 "Королевство Димерия"
+ DMR_neutrality_DEF:1 "Королевство Димерия"
+ DMR_communism:0 "Республика Димерия"
+ DMR_communism_DEF:0 "Республика Димерия"
+ DMR_fascism_ADJ:0 "Димерийск."
+ DMR_democratic_ADJ:0 "Димерийск."
+ DMR_neutrality_ADJ:0 "Димерийск."
+ DMR_communism_ADJ:0 "Димерийск."
+ DMR:0 "Димерия"
+ DMR_DEF:0 "Димерия"
+ DMR_ADJ:0 "Димерийск."
+ 
+ ARM_fascism:0 "Королевство Армерия"
+ ARM_fascism_DEF:0 "Королевство Армерия"
+ ARM_democratic:0 "Республика Армерия"
+ ARM_democratic_DEF:0 "Республика Армерия"
+ ARM_neutrality:1 "Королевство Армерия"
+ ARM_neutrality_DEF:1 "Королевство Армерия"
+ ARM_communism:0 "Республика Армерия"
+ ARM_communism_DEF:0 "Республика Армерия"
+ ARM_fascism_ADJ:0 "Армерийск."
+ ARM_democratic_ADJ:0 "Армерийск."
+ ARM_neutrality_ADJ:0 "Армерийск."
+ ARM_communism_ADJ:0 "Армерийск."
+ ARM:0 "Армерия"
+ ARM_DEF:0 "Армерия"
+ ARM_ADJ:0 "Армерийск."
  
  SDN_fascism:0 "Королевство Содден"
  SDN_fascism_DEF:0 "Королевство Содден"
@@ -94,22 +142,6 @@
  MHK:0 "Махакам"
  MHK_DEF:0 "Армерия"
  MHK_ADJ:0 "Махакамск."
- 
- PTF_fascism:0 "Понтарланд"
- PTF_fascism_DEF:0 "Понтарланд"
- PTF_democratic:0 "Федерация Понтара"
- PTF_democratic_DEF:0 "Федерация Понтара"
- PTF_neutrality:1 "Федерация Понтара"
- PTF_neutrality_DEF:1 "Федерация Понтара"
- PTF_communism:0 "Федерация Понтара"
- PTF_communism_DEF:0 "Федерация Понтара"
- PTF_fascism_ADJ:0 "Понтарск."
- PTF_democratic_ADJ:0 "Понтарск."
- PTF_neutrality_ADJ:0 "Понтарск."
- PTF_communism_ADJ:0 "Понтарск."
- PTF:0 "Понтарланд"
- PTF_DEF:0 "Армерия"
- PTF_ADJ:0 "Понтарск."
  
  RED_fascism:0 "Королевство Редания"
  RED_fascism_DEF:0 "Королевство Редания"
