--- a/WItcherMap/localisation/state_names_l_russian.yml
+++ b/WItcherMap/localisation/state_names_l_russian.yml
@@ -70,7 +70,7 @@
  STATE_69:0 "Судетская область"
  STATE_70:0 "Западная Словакия"
  STATE_71:0 "Восточная Словакия"
- STATE_72:0 "Восточное Лирийское Синегорье"
+ STATE_72:0 "Мак"
  STATE_73:0 "Понт-Редан"
  STATE_74:0 "Дол"
  STATE_75:0 "Спалла"
@@ -82,16 +82,16 @@
  STATE_81:0 "Олтения"
  STATE_82:0 "Инис"
  STATE_83:0 "Порет"
- STATE_84:0 "Трансильвания"
+ STATE_84:0 "Тузла"
  STATE_85:0 "Данциг"
  STATE_86:0 "Познань"
- STATE_87:1 "Лодзь"
+ STATE_87:1 "Армерия"
  STATE_88:1 "Брокилон"
  STATE_89:0 "Станиславов"
- STATE_90:0 "Кельце"
+ STATE_90:0 "Крат"
  STATE_91:0 "Львов"
  STATE_92:0 "Сибелл"
- STATE_93:0 "Холодный Ключ"
+ STATE_93:0 "Бреза"
  STATE_94:0 "Кастерфурт"
  STATE_95:0 "Новогрудок"
  STATE_96:1 "Вилейка"
@@ -209,22 +209,22 @@
  STATE_206:0 "Мён"
  STATE_207:0 "Разван"
  STATE_208:0 "Каррерас"
- STATE_209:0 "Псков"
- STATE_210:0 "Невель"
- STATE_211:0 "Бургас"
- STATE_212:0 "Пловдив"
- STATE_213:0 "Мурманск"
- STATE_214:0 "Архангельск"
- STATE_215:0 "Онега"
- STATE_216:0 "Олонец"
- STATE_217:0 "Сталинград"
- STATE_218:0 "Ростов"
- STATE_219:0 "Москва"
- STATE_220:0 "Курск"
- STATE_221:0 "Харьков"
- STATE_222:0 "Орёл"
- STATE_223:0 "Тула"
- STATE_224:0 "Брянск"
+ STATE_209:0 "Лек"
+ STATE_210:0 "Димер"
+ STATE_211:0 "Северный Юбек"
+ STATE_212:0 "Нюверк"
+ STATE_213:0 "Рендсбург"
+ STATE_214:0 "Рин"
+ STATE_215:0 "Биндюга"
+ STATE_216:0 "Кацзан"
+ STATE_217:0 "Каген"
+ STATE_218:0 "Уна"
+ STATE_219:0 "Бьяль"
+ STATE_220:0 "Флотзам"
+ STATE_221:0 "Молдиник"
+ STATE_222:0 "Аханберг"
+ STATE_223:0 "Райни"
+ STATE_224:0 "Бондар"
  STATE_225:0 "Сумы"
  STATE_226:0 "Днепропетровск"
  STATE_227:0 "Сталино"
