--- a/WItcherMap/localisation/victory_points_l_russian.yml
+++ b/WItcherMap/localisation/victory_points_l_russian.yml
@@ -137,7 +137,7 @@
  VICTORY_POINTS_6807:0 "Караман"
  VICTORY_POINTS_10472:0 "Карс"
  VICTORY_POINTS_784:0 "Ыспарта"
- VICTORY_POINTS_3938:0 "Мадрид"
+ VICTORY_POINTS_3938:0 "Элландер"
  VICTORY_POINTS_9764:0 "Барселона"
  VICTORY_POINTS_740:0 "Бильбао"
  VICTORY_POINTS_758:1 "Ла-Корунья"
@@ -234,7 +234,7 @@
  VICTORY_POINTS_7661:0 "Баку"
  VICTORY_POINTS_9288:0 "Гомель"
  VICTORY_POINTS_9355:0 "Орёл"
- VICTORY_POINTS_9753:0 "Астрахань"
+ VICTORY_POINTS_9753:0 "Амберг"
  VICTORY_POINTS_10641:0 "Якутск"
  VICTORY_POINTS_10696:0 "Омск"
  VICTORY_POINTS_11159:1 "Петрозаводск"
@@ -328,7 +328,7 @@
  VICTORY_POINTS_12213:0 "Апарри"
  VICTORY_POINTS_7381:0 "Батавия"
  VICTORY_POINTS_4608:0 "Сурабая"
- VICTORY_POINTS_4652:0 "Медан"
+ VICTORY_POINTS_4652:0 "Ла Валетт"
  VICTORY_POINTS_10237:0 "Баликпапан"
  VICTORY_POINTS_10263:0 "Макасар"
  VICTORY_POINTS_12268:0 "Палембанг"
@@ -532,7 +532,7 @@
  VICTORY_POINTS_1070:0 "Хайкоу"
  VICTORY_POINTS_1273:0 "Гоа"
  VICTORY_POINTS_1440:0 "Сан-Хуан"
- VICTORY_POINTS_1751:1 "Понта-Делгада"
+ VICTORY_POINTS_1751:1 "Риссберг"
  VICTORY_POINTS_2038:0 "Фритаун"
  VICTORY_POINTS_2045:0 "Тяньшуй"
  VICTORY_POINTS_2189:0 "Хобарт"
@@ -614,7 +614,7 @@
  VICTORY_POINTS_2021:0 "Вилья-Эрмоса"
  VICTORY_POINTS_8089:0 "Пуэбла"
  VICTORY_POINTS_8097:0 "Хуарес"
- VICTORY_POINTS_2008:0 "Леон"
+ VICTORY_POINTS_2008:0 "Райни"
  VICTORY_POINTS_7921:0 "Дуранго"
  VICTORY_POINTS_8057:0 "Кулиакан"
  VICTORY_POINTS_10895:0 "Масатлан"
@@ -673,7 +673,7 @@
  VICTORY_POINTS_6241:0 "Утрехт"
  VICTORY_POINTS_9335:0 "Гронинген"
  VICTORY_POINTS_6336:0 "Леуварден"
- VICTORY_POINTS_9363:0 "Арнем"
+ VICTORY_POINTS_9363:0 "Воле"
  VICTORY_POINTS_3262:0 "Бреда"
  VICTORY_POINTS_11562:0 "Маастрихт"
  VICTORY_POINTS_13068:0 "Лёвен"
@@ -726,7 +726,7 @@
  VICTORY_POINTS_11683:0 "Николаев"
  VICTORY_POINTS_11504:0 "Полтава"
  VICTORY_POINTS_3520:0 "Сумы"
- VICTORY_POINTS_9566:0 "Шостка"
+ VICTORY_POINTS_9566:0 "Бреза"
  VICTORY_POINTS_9449:0 "Белгород"
  VICTORY_POINTS_3568:0 "Чернигов"
  VICTORY_POINTS_11597:0 "Добрич"
@@ -980,3 +980,5 @@
  VICTORY_POINTS_7597:0 "Кызыл-Орда"
  VICTORY_POINTS_7341:0 "Актобе"
  VICTORY_POINTS_1517:0 "Мангыстау"
+ VICTORY_POINTS_8950:0 "Спантина"
+ VICTORY_POINTS_2536:0 "Байирс"
