--- a/WItcherMap/localisation/countries_l_russian.yml
+++ b/WItcherMap/localisation/countries_l_russian.yml
@@ -191,21 +191,21 @@
  SKE_DEF:0 "Скеллиге"
  SKE_ADJ:0 "Скеллигийск."
  
- KRK_fascism:0 "Королевство Керак"
- KRK_fascism_DEF:0 "Королевство Керак"
- KRK_democratic:0 "Республика Керак"
- KRK_democratic_DEF:0 "Республика Керак"
- KRK_neutrality:1 "Королевство Керак"
- KRK_neutrality_DEF:1 "Королевство Керак"
- KRK_communism:0 "Республика Керак"
- KRK_communism_DEF:0 "Республика Керак"
- KRK_fascism_ADJ:0 "Керакск."
- KRK_democratic_ADJ:0 "Керакск."
- KRK_neutrality_ADJ:0 "Керакск."
- KRK_communism_ADJ:0 "Керакск."
- KRK:0 "Керак"
- KRK_DEF:0 "Керак"
- KRK_ADJ:0 "Керакск."
+ KRK_fascism:0 "Королевство Великоморье"
+ KRK_fascism_DEF:0 "Королевство Великоморье"
+ KRK_democratic:0 "Республика Великоморье"
+ KRK_democratic_DEF:0 "Республика Великоморье"
+ KRK_neutrality:1 "Королевство Великоморье"
+ KRK_neutrality_DEF:1 "Королевство Великоморье"
+ KRK_communism:0 "Республика Великоморье"
+ KRK_communism_DEF:0 "Республика Великоморье"
+ KRK_fascism_ADJ:0 "Великоморск."
+ KRK_democratic_ADJ:0 "Великоморск."
+ KRK_neutrality_ADJ:0 "Великоморск."
+ KRK_communism_ADJ:0 "Великоморск."
+ KRK:0 "Великоморье"
+ KRK_DEF:0 "Великоморье"
+ KRK_ADJ:0 "Великоморск."
  
  BRG_fascism:0 "Королевство Бругге"
  BRG_fascism_DEF:0 "Королевство Бругге"
