--- a/WItcherMap/localisation/state_names_l_russian.yml
+++ b/WItcherMap/localisation/state_names_l_russian.yml
@@ -69,10 +69,10 @@
  STATE_68:0 "Восточная марка"
  STATE_69:0 "Судетская область"
  STATE_70:0 "Западная Словакия"
- STATE_71:0 "Восточная Словакия"
+ STATE_71:0 "Ягодник"
  STATE_72:0 "Мак"
- STATE_73:0 "Понт-Редан"
- STATE_74:0 "Дол"
+ STATE_73:0 "Дол"
+ STATE_74:0 "Злаго"
  STATE_75:0 "Спалла"
  STATE_76:0 "Северная Трансильвания"
  STATE_77:0 "Тирри"
@@ -225,40 +225,40 @@
  STATE_222:0 "Аханберг"
  STATE_223:0 "Райни"
  STATE_224:0 "Бондар"
- STATE_225:0 "Сумы"
- STATE_226:0 "Днепропетровск"
- STATE_227:0 "Сталино"
- STATE_228:0 "Ворошиловград"
- STATE_229:1 "Азербайджан"
- STATE_230:0 "Армения"
- STATE_231:0 "Грузия"
- STATE_232:1 "Дагестан"
- STATE_233:1 "Сочи"
- STATE_234:1 "Вырва"
- STATE_235:0 "Ортагор"
- STATE_236:0 "Стрепт"
- STATE_237:1 "Марнадаль"
- STATE_238:0 "Аттре"
- STATE_239:0 "Фраммеринг"
- STATE_240:0 "Тигг"
- STATE_241:0 "Хочебуж"
- STATE_242:0 "Вильенталь"
- STATE_243:0 "Четыругл"
- STATE_244:0 "Эрленвальд"
- STATE_245:0 "Сворлагги"
- STATE_246:0 "Трольд"
- STATE_247:0 "Гелен"
- STATE_248:0 "Альмхульд"
- STATE_249:0 "Гиндарри"
- STATE_250:0 "Мюр"
- STATE_251:1 "Уриалла"
- STATE_252:1 "Амберг"
- STATE_253:0 "Настрог"
- STATE_254:0 "Брокилон"
- STATE_255:0 "Воле"
- STATE_256:1 "Цидарберг"
- STATE_257:0 "Мосберг"
- STATE_258:0 "Роггевеен"
+ STATE_225:0 "Штейгер"
+ STATE_226:0 "Видмар"
+ STATE_227:0 "Гоог"
+ STATE_228:0 "Борос"
+ STATE_229:1 "Дальберг"
+ STATE_230:0 "Фукс"
+ STATE_231:0 "Измит"
+ STATE_232:1 "Ривийский Махакам"
+ STATE_233:1 "Кайсери"
+ STATE_234:1 "Скала"
+ STATE_235:0 "Растбург"
+ STATE_236:0 "Дравоград"
+ STATE_237:1 "Средберг"
+ STATE_238:0 "Задар"
+ STATE_239:0 "Зашчита"
+ STATE_240:0 "Спалла"
+ STATE_241:0 "Сорочье взгорье"
+ STATE_242:0 "Мевберг"
+ STATE_243:0 "Кам"
+ STATE_244:0 "Кридам"
+ STATE_245:0 "Уранберг"
+ STATE_246:0 "Межречье"
+ STATE_247:0 "Одо"
+ STATE_248:0 "Кербин"
+ STATE_249:0 "Вербов"
+ STATE_250:0 "Ольховец"
+ STATE_251:1 "Белорецк"
+ STATE_252:1 "Агидель"
+ STATE_253:0 "Лирия"
+ STATE_254:0 "Низины"
+ STATE_255:0 "Северное Лирийское Подгорье"
+ STATE_256:1 "Южное Лирийское Подгорье"
+ STATE_257:0 "Боголец"
+ STATE_258:0 "Церан"
  STATE_259:0 "Керакберг"
  STATE_260:0 "Каэльф"
  STATE_261:0 "Вартбург"
