--- a/WItcherMap/localisation/victory_points_l_russian.yml
+++ b/WItcherMap/localisation/victory_points_l_russian.yml
@@ -189,7 +189,7 @@
  VICTORY_POINTS_3273:0 "Глазго"
  VICTORY_POINTS_9297:0 "Бирмингем"
  VICTORY_POINTS_351:0 "Ньюкасл"
- VICTORY_POINTS_3369:0 "Бристоль"
+ VICTORY_POINTS_3369:0 "Гелен"
  VICTORY_POINTS_3379:0 "Белфаст"
  VICTORY_POINTS_6384:0 "Ливерпуль"
  VICTORY_POINTS_9379:0 "Лидс"
