--- a/WItcherMap/localisation/countries_l_russian.yml
+++ b/WItcherMap/localisation/countries_l_russian.yml
@@ -15,6 +15,38 @@
  CTR_DEF:0 "Цинтра"
  CTR_ADJ:0 "Цинтрийск."
  
+ NZR_fascism:0 "Королевство Назаир"
+ NZR_fascism_DEF:0 "Королевство Назаир"
+ NZR_democratic:0 "Республика Назаир"
+ NZR_democratic_DEF:0 "Республика Назаир"
+ NZR_neutrality:1 "Королевство Назаир"
+ NZR_neutrality_DEF:1 "Королевство Назаир"
+ NZR_communism:0 "Республика Назаир"
+ NZR_communism_DEF:0 "Республика Назаир"
+ NZR_fascism_ADJ:0 "Назаирск."
+ NZR_democratic_ADJ:0 "Назаирск."
+ NZR_neutrality_ADJ:0 "Назаирск."
+ NZR_communism_ADJ:0 "Назаирск."
+ NZR:0 "Назаир"
+ NZR_DEF:0 "Назаир"
+ NZR_ADJ:0 "Назаирск."
+ 
+ KVR_fascism:0 "Королевство Ковир"
+ KVR_fascism_DEF:0 "Королевство Ковир"
+ KVR_democratic:0 "Республика Ковир"
+ KVR_democratic_DEF:0 "Республика Ковир"
+ KVR_neutrality:1 "Королевство Ковир"
+ KVR_neutrality_DEF:1 "Королевство Ковир"
+ KVR_communism:0 "Республика Ковир"
+ KVR_communism_DEF:0 "Республика Ковир"
+ KVR_fascism_ADJ:0 "Ковирс."
+ KVR_democratic_ADJ:0 "Ковирс."
+ KVR_neutrality_ADJ:0 "Ковирс."
+ KVR_communism_ADJ:0 "Ковирс."
+ KVR:0 "Ковир"
+ KVR_DEF:0 "Ковир"
+ KVR_ADJ:0 "Ковирс."
+ 
  PTF_fascism:0 "Понтарланд"
  PTF_fascism_DEF:0 "Понтарланд"
  PTF_democratic:0 "Федерация Понтара"
