--- a/WItcherMap/localisation/state_names_l_russian.yml
+++ b/WItcherMap/localisation/state_names_l_russian.yml
@@ -51,7 +51,7 @@
  STATE_50:0 "Вюртемберг"
  STATE_51:0 "Рейнская область"
  STATE_52:0 "Верхняя Бавария"
- STATE_53:0 "Нижняя Бавария"
+ STATE_53:0 "Граборг"
  STATE_54:0 "Дальние Драконьи Горы"
  STATE_55:0 "Гессен"
  STATE_56:0 "Везер-Эмс"
@@ -61,7 +61,7 @@
  STATE_60:0 "Тюрингия"
  STATE_61:0 "Мекленбург"
  STATE_62:1 "Передняя Померания"
- STATE_63:0 "Передняя Померания"
+ STATE_63:0 "Родеберг"
  STATE_64:0 "Восточные Драконьи Горы"
  STATE_65:0 "Саксония"
  STATE_66:0 "Нижняя Силезия"
@@ -74,13 +74,13 @@
  STATE_73:0 "Дол"
  STATE_74:0 "Злаго"
  STATE_75:0 "Спалла"
- STATE_76:0 "Северная Трансильвания"
+ STATE_76:0 "Тирри"
  STATE_77:0 "Тирри"
  STATE_78:0 "Бессарабия"
  STATE_79:0 "Марибор"
  STATE_80:0 "Исменберг"
- STATE_81:0 "Олтения"
- STATE_82:0 "Инис"
+ STATE_81:0 "Инис"
+ STATE_82:0 "Порет"
  STATE_83:0 "Порет"
  STATE_84:0 "Тузла"
  STATE_85:0 "Данциг"
@@ -259,63 +259,63 @@
  STATE_256:1 "Южное Лирийское Подгорье"
  STATE_257:0 "Боголец"
  STATE_258:0 "Церан"
- STATE_259:0 "Керакберг"
- STATE_260:0 "Каэльф"
- STATE_261:0 "Вартбург"
- STATE_262:0 "Южный Юбек"
- STATE_263:0 "Диллинген"
- STATE_264:0 "Кастерфурт"
- STATE_265:0 "Амелл"
- STATE_266:0 "Ток"
- STATE_267:0 "Гиар"
- STATE_268:0 "Тергано"
- STATE_269:0 "Гсур"
- STATE_270:0 "Гар Саги"
- STATE_271:1 "Веррас"
- STATE_272:0 "Нюнреут"
- STATE_273:0 "Сапир"
- STATE_274:0 "Силт"
- STATE_275:0 "Мокдаль"
- STATE_276:0 "Онтароль"
- STATE_277:0 "Троккар"
- STATE_278:0 "Вютерберг"
- STATE_279:0 "Рекхта"
- STATE_280:0 "Люнедберг"
- STATE_281:0 "Гардан"
- STATE_282:0 "Канто-глоир"
- STATE_283:0 "Эиген"
- STATE_284:0 "Авеанн"
- STATE_285:0 "Понт-Каэдвен"
- STATE_286:1 "Понт-Аэдирн"
- STATE_287:0 "Понт-Темер"
- STATE_288:0 "Горс-Веллен"
- STATE_289:0 "Тегмонд"
- STATE_290:0 "Риссберг"
- STATE_291:0 "Чиппира"
- STATE_292:0 "Дориан"
- STATE_293:0 "Бурдорфф"
- STATE_294:0 "Напий"
- STATE_295:0 "Бренна"
- STATE_296:0 "Майена"
- STATE_297:0 "Гаррамор"
+ STATE_259:0 "Новиград"
+ STATE_260:0 "Денесле"
+ STATE_261:0 "Оксенфурт"
+ STATE_262:0 "Ринда"
+ STATE_263:0 "Эгремонт"
+ STATE_264:0 "Силке"
+ STATE_265:0 "Ропчищ"
+ STATE_266:0 "Третогор"
+ STATE_267:0 "Гелибол"
+ STATE_268:0 "Трой"
+ STATE_269:0 "Роггевен"
+ STATE_270:0 "Лютон"
+ STATE_271:1 "Блавикен"
+ STATE_272:0 "Ыспаден"
+ STATE_273:0 "Дракенборг"
+ STATE_274:0 "Монтекальво"
+ STATE_275:0 "Нивабен"
+ STATE_276:0 "Мальва"
+ STATE_277:0 "Йезерсберг"
+ STATE_278:0 "Ямурлак"
+ STATE_279:0 "Мирт"
+ STATE_280:0 "Гленельгберг"
+ STATE_281:0 "Ваттвеир"
+ STATE_282:0 "Понт-Ванис"
+ STATE_283:0 "Гвыдир"
+ STATE_284:0 "Маллеора"
+ STATE_285:0 "Крейгйау"
+ STATE_286:1 "Кринфрид"
+ STATE_287:0 "Северные Малеоры"
+ STATE_288:0 "Восточные Малеоры"
+ STATE_289:0 "Реданские Драконьи Горы"
+ STATE_290:0 "Дальнегорье"
+ STATE_291:0 "Горсверг"
+ STATE_292:0 "Изток"
+ STATE_293:0 "Фаргиль"
+ STATE_294:0 "Радоград"
+ STATE_295:0 "Ветергоф"
+ STATE_296:0 "Нова Звезда"
+ STATE_297:0 "Нортурн"
  STATE_298:0 "Дорндаль"
- STATE_299:0 "Марибор"
- STATE_300:0 "Разван"
- STATE_301:0 "Темерский Махакам"
- STATE_302:0 "Каррерас"
- STATE_303:0 "Вызима"
- STATE_304:1 "Ла Валетт"
- STATE_305:0 "Элландер"
- STATE_306:0 "Мён"
- STATE_307:0 "Новиград"
- STATE_308:0 "Оксенфурт"
- STATE_309:0 "Ринда"
- STATE_310:0 "Денесле"
- STATE_311:1 "Эгремонт"
- STATE_312:0 "Силке"
- STATE_313:0 "Дракенборг"
- STATE_314:0 "Третогор"
- STATE_315:0 "Ропчищ"
+ STATE_299:0 "Ваттвеир"
+ STATE_300:0 "Йарлфорд"
+ STATE_301:0 "Норен"
+ STATE_302:0 "Линь"
+ STATE_303:0 "Фрам"
+ STATE_304:1 "Локберг"
+ STATE_305:0 "Пранберг"
+ STATE_306:0 "Западные Драконьи Горы"
+ STATE_307:0 "Лан Эксетер"
+ STATE_308:0 "Раквелерин"
+ STATE_309:0 "Аэд Гинваэль"
+ STATE_310:0 "Лербост"
+ STATE_311:1 "Порт Бельмут"
+ STATE_312:0 "Центральные Драконьи Горы"
+ STATE_313:0 "Холе"
+ STATE_314:0 "Восточные Драконьи Горы"
+ STATE_315:0 "Западные Малеоры"
  STATE_316:0 "Трой"
  STATE_317:0 "Роггевен"
  STATE_318:0 "Гелибол"
