Новые цвета и государства

--- a/WItcherMap/localisation/countries_l_russian.yml
+++ b/WItcherMap/localisation/countries_l_russian.yml
@@ -31,6 +31,54 @@
  RIV_DEF:0 "Ривия"
  RIV_ADJ:0 "Цинтрийск."
  
+ FNP_fascism:0 "Королевство Ривия"
+ FNP_fascism_DEF:0 "Королевство Ривия"
+ FNP_democratic:0 "Федерация Северных Провинций"
+ FNP_democratic_DEF:0 "Федерация Северных Провинций"
+ FNP_neutrality:1 "Королевство Ривия"
+ FNP_neutrality_DEF:1 "Королевство Ривия"
+ FNP_communism:0 "Республика Ривия"
+ FNP_communism_DEF:0 "Республика Ривия"
+ FNP_fascism_ADJ:0 "Цинтрийск."
+ FNP_democratic_ADJ:0 "Цинтрийск."
+ FNP_neutrality_ADJ:0 "Цинтрийск."
+ FNP_communism_ADJ:0 "Цинтрийск."
+ FNP:0 "Ривия"
+ FNP_DEF:0 "Ривия"
+ FNP_ADJ:0 "Цинтрийск."
+ 
+ GSO_fascism:0 "Королевство Гесо"
+ GSO_fascism_DEF:0 "Королевство Гесо"
+ GSO_democratic:0 "Территория Гесо"
+ GSO_democratic_DEF:0 "Территория Гесо"
+ GSO_neutrality:1 "Королевство Гесо"
+ GSO_neutrality_DEF:1 "Королевство Гесо"
+ GSO_communism:0 "Республика Гесо"
+ GSO_communism_DEF:0 "Республика Гесо"
+ GSO_fascism_ADJ:0 "Цинтрийск."
+ GSO_democratic_ADJ:0 "Цинтрийск."
+ GSO_neutrality_ADJ:0 "Цинтрийск."
+ GSO_communism_ADJ:0 "Цинтрийск."
+ GSO:0 "Гесо"
+ GSO_DEF:0 "Гесо"
+ GSO_ADJ:0 "Цинтрийск."
+ 
+ MTN_fascism:0 "Королевство Гесо"
+ MTN_fascism_DEF:0 "Королевство Гесо"
+ MTN_democratic:0 "Центральнонордалическая Конфедерация"
+ MTN_democratic_DEF:0 "Центральнонордалическая Конфедерация"
+ MTN_neutrality:1 "Королевство Гесо"
+ MTN_neutrality_DEF:1 "Королевство Гесо"
+ MTN_communism:0 "Республика Гесо"
+ MTN_communism_DEF:0 "Республика Гесо"
+ MTN_fascism_ADJ:0 "Цинтрийск."
+ MTN_democratic_ADJ:0 "Цинтрийск."
+ MTN_neutrality_ADJ:0 "Цинтрийск."
+ MTN_communism_ADJ:0 "Цинтрийск."
+ MTN:0 "Гесо"
+ MTN_DEF:0 "Гесо"
+ MTN_ADJ:0 "Цинтрийск."
+ 
  SKU_fascism:0 "Королевство Каэдвен"
  SKU_fascism_DEF:0 "Королевство Каэдвен"
  SKU_democratic:0 "Консилорат Каэдвен"
