Страны для скриншота

--- a/WItcherMap/localisation/countries_l_russian.yml
+++ b/WItcherMap/localisation/countries_l_russian.yml
@@ -382,6 +382,54 @@
  BRG:0 "Бругге"
  BRG_DEF:0 "Бругге"
  BRG_ADJ:0 "Бруггийск."
+
+ GLE_fascism:0 "Каем Глеанна"
+ GLE_fascism_DEF:0 "Королевство Каем Глеанна"
+ GLE_democratic:0 "Республика Каем Глеанна"
+ GLE_democratic_DEF:0 "Республика Каем Глеанна"
+ GLE_neutrality:1 "Королевство Каем Глеанна"
+ GLE_neutrality_DEF:1 "Королевство Каем Глеанна"
+ GLE_communism:0 "Республика Каем Глеанна"
+ GLE_communism_DEF:0 "Республика Каем Глеанна"
+ GLE_fascism_ADJ:0 "Глеанизм."
+ GLE_democratic_ADJ:0 "Глеанизм."
+ GLE_neutrality_ADJ:0 "Глеанизм."
+ GLE_communism_ADJ:0 "Глеанизм."
+ GLE:0 "Каем Глеанна"
+ GLE_DEF:0 "Каем Глеанна"
+ GLE_ADJ:0 "Глеанизм."
+
+ EBN_fascism:0 "Эббинг"
+ EBN_fascism_DEF:0 "Королевство Эббинг"
+ EBN_democratic:0 "Республика Эббинг"
+ EBN_democratic_DEF:0 "Республика Эббинг"
+ EBN_neutrality:1 "Королевство Эббинг"
+ EBN_neutrality_DEF:1 "Королевство Эббинг"
+ EBN_communism:0 "Республика Эббинг"
+ EBN_communism_DEF:0 "Республика Эббинг"
+ EBN_fascism_ADJ:0 "Эббингнизм."
+ EBN_democratic_ADJ:0 "Эббингнизм."
+ EBN_neutrality_ADJ:0 "Эббингнизм."
+ EBN_communism_ADJ:0 "Эббингнизм."
+ EBN:0 "Эббинг"
+ EBN_DEF:0 "Эббинг"
+ EBN_ADJ:0 "Эббингнизм."
+
+ MHT_fascism:0 "Мехт"
+ MHT_fascism_DEF:0 "Королевство Мехт"
+ MHT_democratic:0 "Республика Мехт"
+ MHT_democratic_DEF:0 "Республика Мехт"
+ MHT_neutrality:1 "Королевство Мехт"
+ MHT_neutrality_DEF:1 "Королевство Мехт"
+ MHT_communism:0 "Республика Мехт"
+ MHT_communism_DEF:0 "Республика Мехт"
+ MHT_fascism_ADJ:0 "Мехтнизм."
+ MHT_democratic_ADJ:0 "Мехтнизм."
+ MHT_neutrality_ADJ:0 "Мехтнизм."
+ MHT_communism_ADJ:0 "Мехтнизм."
+ MHT:0 "Мехт"
+ MHT_DEF:0 "Мехт"
+ MHT_ADJ:0 "Мехтнизм."
  
  GER_fascism:0 "Третий рейх"
  GER_fascism_DEF:0 "Третий рейх"
